--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,38 @@
-baseURL = 'https://example.org/'
-languageCode = 'en-us'
-title = 'Kacken auf Wacken'
+baseURL = "https://brettimkopf.github.io/KackenAufWacken"
+languageCode = "de-de"
+title = "Kacken auf Wacken"
 theme = "zen"
+
+[params]
+favicon = "favicon.png"
+icon = "favicon.png"
+sitename = false
+copyright = "© BrettImKopf"
+  menuInHeader = false        # Move the main menu to the header, default false.
+  mobileMenu = false          # Turn on a mobile menu on small screens, default false.
+  mobileMenuOutline = true   # Mobil menu button as outline, default false.
+[[menu.main]]
+  identifier = "main"
+  name = "Startseite"
+  link = "#main"
+  url = "/"
+  weight = 1
+[[menu.main]]
+  identifier = "quickstart"
+  name = "Quickstart"
+  link = "#quickstart"
+  url = "/quickstart"
+  weight = 2
+[[menu.main]]
+  identifier = "introduction"
+  name = "Einführung"
+  link = "#introduction"
+  url = "/introduction"
+  weight = 3
+
+[[menu.main]]
+  identifier = "tutorials"
+  name = "Tutorials+FAQs"
+  link = "#tutorials"
+  url = "/tutorials"
+  weight = 4
