--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "https://brettimkopf.github.io/KackenAufWacken"
+baseURL = "https://brettimkopf.github.io/Kacken-auf-Wacken"
 languageCode = "de-de"
 title = "Kacken auf Wacken"
 theme = "zen"
@@ -11,7 +11,7 @@ theme = "zen"
 favicon = "favicon.png"
 icon = "favicon.png"
 sitename = false
-copyright = "[© BrettImKopf](https://github.com/BrettImKopf/KackenAufWacken)"
+copyright = "© [BrettImKopf](https://github.com/BrettImKopf/Kacken-auf-Wacken)"
 poweredby = true
 menuInHeader = false        # Move the main menu to the header, default false.
 mobileMenuOutline = true   # Mobil menu button as outline, default false.
